Time set function OK..

--- a/UploadFiles/index.html
+++ b/UploadFiles/index.html
@@ -121,6 +121,7 @@
     <button id='btnQuery6'>CB6 OFF</button>
     <button id='btnQuery7'>충전 정지</button>
     <button id='btnQuery8'>저전압</button>
+    <button id='btnSetTime'>TimeSet</button>
     </div>
     </div>
     <div id='HtmlLogView'>
