테스트 자바스크립트를 통해 데이타 파싱을 하는 부분을 추가하였다

--- a/UploadFiles/fileUpload.html
+++ b/UploadFiles/fileUpload.html
@@ -1,14 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<body>
+  
 <form method="POST" action="#" enctype="multipart/form-data" id="upload_form">
-  <input
-    type="file"
-    name="update"
-    id="file"
-    onchange="sub(this)"
-    style="display: none"
-  />
-  <label id="file-input" for="file"> Choose file...</label>
-  <input type="submit" class="btn" value="Update" />
+  <input type="file" name="update" id="file" onchange="sub(this)" style="display: none" />
+  <label id="file-input" for="file"> Choose file.....</label>
+  <input type="submit" class="btn" value="Update(HTML,CSS,etc)" />
   <br /><br />
   <div id="prg"></div>
   <br />
@@ -105,3 +109,6 @@
     color: #fff;
     cursor: pointer;
   }</style>;
+
+</body>
+</html>
