알람문제를 해결함

--- a/UploadFiles/test.html
+++ b/UploadFiles/test.html
@@ -3,19 +3,20 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="">
     <title>Document</title>
     <link rel="stylesheet" href="index.css" />
     <script src="test.js" defer></script>
+    <audio id="warning-sound" src="bell-ringing.mp3" ></audio>
 </head>
 
 <body>
-  <div id="HtmlLogView">
-  <h1 id="idlog">LogView</h1>
-  </div>
- 
+    <div id="HtmlLogView">
+        <h1 id="idlog">LogView</h1>
+    </div>
 
+    <button id="showButton">START alarm</button>
+    <button id="stopButton">Stop alarm</button>
 </body>
 
 </html>
