Sound error 을 어렵게 잡았다

--- a/UploadFiles/test.html
+++ b/UploadFiles/test.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="index.css" />
     <script src="test.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script>
-    <audio id="warning-sound" src="bell-ringing.mp3" autoplay="false" muted="muted"></audio>
+    <audio id="warning-sound"  src="bell-ringing.mp3"></audio>
 </head>
 
 <body>
