--- a/UploadFiles/test.html
+++ b/UploadFiles/test.html
@@ -182,12 +182,12 @@
             <input type=checkbox id="15regbit_2"></chekbox>
             <input type=checkbox id="15regbit_3"></chekbox>
             <input type=checkbox id="15regbit_4"></chekbox>
-            <input type=checkbox id="15regbit_5"></chekbox>
+            <input type=checkbox id="15regbit_5" checked></chekbox>
             <input type=checkbox id="15regbit_6"></chekbox>
             <input type=checkbox id="15regbit_7"></chekbox>
             <input type=checkbox id="15regbit_8"></chekbox>
             <input type=checkbox id="15regbit_9"></chekbox>
-            <input type=checkbox id="15regbit_10"></chekbox>
+            <input type=checkbox id="15regbit_10" ></chekbox>
             <input type=checkbox id="15regbit_11"></chekbox>
             <input type=checkbox id="15regbit_12"></chekbox>
             <input type=checkbox id="15regbit_13"></chekbox>
