--- a/UploadFiles/fileUpload.html
+++ b/UploadFiles/fileUpload.html
@@ -13,7 +13,7 @@
 <body>
 
   <form method="POST" action="#" enctype="multipart/form-data" id="upload_form">
-    <input type="file" name="update" id="file" onchange="sub(this)" style="display: none" />
+    <input type="file" name="update" id="file" onchange="sub(this)" style="display: none" multiple />
     <label id="file-input" for="file"> Choose file.....</label>
     <input type="submit" class="btn" value="Update(HTML,CSS,etc)" />
     <br /><br />
