--- a/UploadFiles/index.html
+++ b/UploadFiles/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="index.css" />
     <script src="index.js" defer></script>
     <script src="svg.min.js"></script>
-    <!-- <audio id="warning-sound" src="bell-ringing.mp3"></audio> -->
+    <audio id="warning-sound" src="bell-ringing.mp3"></audio>
 </head>
 
 <body>
@@ -260,7 +260,7 @@
         <h1 id="idviewBasic">충전기 기본정보</h1>
         <dl class="data-list">
             <div>
-                <dt>제조년월일:</dt>
+                <dt >제조년월일:</dt>
                 <dd id="madeDate">2023년 2월 3일</dd>
             </div>
             <div>
@@ -319,6 +319,26 @@
             <div> <input type="text" placeholder="81" id="webSocketPortTxt"> </div>
             <div><input type="button" id="socketportBtn" value="변경"></div>
 
+            <div><label class="cssLblNetwork" id="">BAUD RATE</label></div>
+            <div> 
+                <!-- <input type="text" placeholder="9600" id="baudRatetxt">  -->
+
+            <select id="baudRatetxt" name="baudrate">
+            <option value="2400">2400</option>
+            <option value="4800">4800</option>
+            <option value="9600" selected>9600</option>
+            <option value="19200">19200</option>
+            <option value="38400">38400</option>
+            <option value="58600">58600</option>
+            <option value="115200">115200</option>
+            </select>
+        </div>
+
+            <div><input type="button" id="baudRateBtn" value="변경"></div>
+
+            <div><label class="cssLblNetwork" id="">Modbus Interval</label></div>
+            <div> <input type="text" placeholder="300" id="intervaltxt"> </div>
+            <div><input type="button" id="intervalBtn" value="변경"></div>
 
             <div><input type=checkbox id="ntpuseChkbox">NTP 사용 </chekbox>
             </div>
@@ -331,13 +351,20 @@
 
 
             <div><label class="cssLblNetwork" id="">사용자ID변경</label></div>
-            <div> <input type="text" id="useridtxt"> </div>
+            <div> <input type="text" id="useridtxt" > </div>
             <div><input type="button" id="useridbtn" value="변경"></div>
 
             <div><label class="cssLblNetwork" id="">비밀번호변경</label></div>
-            <div> <input type="password" id="passwdtxt"> </div>
+            <div> <input type="password" id="passwdtxt" > </div>
             <div><input type="button" id="passwdbtn" value="변경"></div>
+            <div><label class="cssLblNetwork" id="">Reboot</label></div>
+            <div> </div>
+            <div><input type="button" id="rebootBtn" value="실행"></div>
 
+            <div> <label>ver </label></div>
+            <div><input type="text" id="versionLbl" > </div>
+            <div></div>
+            
         </div>
     </div>
     <!-- 여기까지이다. -->
@@ -349,7 +376,7 @@
         <p style="margin-left: 50px">IFTECH.Co.LTD.http://www.iftech.co.kr</p>
         <p><label id="statusBar">message</label></p><br>
 
-        <p style="margin-right: 50px">Ver: V1.0.0.0</p>
+        <p style="margin-right: 50px"></p></p>
     </div>
 
 </body>
