1. 웹에 전송하는 시간은 1초로 고정한다. 2. modbus쿼리는 웹에서 설정한 값으로 한다. 최소값은 300ms

--- a/UploadFiles/test.html
+++ b/UploadFiles/test.html
@@ -338,6 +338,14 @@
             <div> <input type="password" id="passwdtxt" > </div>
             <div><input type="button" id="passwdbtn" value="변경"></div>
 
+            <div><label class="cssLblNetwork" id="">Reboot</label></div>
+            <div> </div>
+            <div><input type="button" id="rebootBtn" value="실행"></div>
+
+            <div> <label>ver </label></div>
+            <div><input type="text" id="versionLbl" readonly> </div>
+            <div></div>
+
         </div>
     </div>
     <!-- 여기까지이다. -->
