--- a/UploadFiles/index.html
+++ b/UploadFiles/index.html
@@ -357,12 +357,13 @@
             <div><label class="cssLblNetwork" id="">비밀번호변경</label></div>
             <div> <input type="password" id="passwdtxt" > </div>
             <div><input type="button" id="passwdbtn" value="변경"></div>
+
             <div><label class="cssLblNetwork" id="">Reboot</label></div>
             <div> </div>
             <div><input type="button" id="rebootBtn" value="실행"></div>
 
             <div> <label>ver </label></div>
-            <div><input type="text" id="versionLbl" > </div>
+            <div><input type="text" id="versionLbl" readonly> </div>
             <div></div>
             
         </div>
